added configs for the project

--- a/DBLP-statistics/src/main/resources/mapredjobs.conf
+++ b/DBLP-statistics/src/main/resources/mapredjobs.conf
@@ -1,8 +1,33 @@
 mapred-pipeline = {
     Job1 {
-        name = "job1"
-        InputPath = "/home/hadoop/input"
-        OutpurPath = "/home/hadoop/output/"
+        name = "MapreduceJob1"
+        InputPath = "/user/maria_dev/Input/"
+        OutputPath = "/user/maria_dev/Output/"
+        Seperator = ","
+    }
+    Job2 {
+        name = "MapreduceJob2"
+        InputPath = "/user/maria_dev/Input/"
+        OutputPath = "/user/maria_dev/Output/"
+        Seperator = ","
+    }
+    Job3 {
+        name = "MapreduceJob3"
+        InputPath = "/user/maria_dev/Input/"
+        OutputPath = "/user/maria_dev/Output/"
+        Seperator = ","
+    }
+    Job4 {
+        name = "MapreduceJob4"
+        InputPath = "/user/maria_dev/Input/"
+        OutputPath = "/user/maria_dev/Output/"
+        Seperator = ","
+    }
+    Job5 {
+        name = "MapreduceJob5"
+        InputPath = "/user/maria_dev/Input/"
+        OutputPath = "/user/maria_dev/Output/"
+        Seperator = ","
     }
 
 }
