--- a/DBLP-statistics/src/main/resources/xmltagpair.conf
+++ b/DBLP-statistics/src/main/resources/xmltagpair.conf
@@ -1,11 +1,27 @@
 xmltags {
     xml-start-tags = [
-    "<article ", "<inproceedings ", "<proceedings ", "<book ", "<incollection ",
-    "<phdthesis ", "<mastersthesis ", "<www ", "<person ", "<data "
+    "<article ",
+    "<inproceedings ",
+    "<proceedings ",
+    "<book ",
+    "<incollection ",
+    "<phdthesis ",
+    "<mastersthesis ",
+    "<www ",
+    "<person ",
+    "<data "
     ]
 
     xml-end-tags = [
-    "</article>", "</inproceedings>", "</proceedings>", "</book>", "</incollection>", "</phdthesis>",
-    "</mastersthesis>", "</www>", "</person>", "</data>"
+    "</article>",
+    "</inproceedings>",
+    "</proceedings>",
+    "</book>",
+    "</incollection>",
+    "</phdthesis>",
+    "</mastersthesis>",
+    "</www>",
+    "</person>",
+    "</data>"
     ]
 }
