added CSV files. Refactored the code

--- a/DBLP-statistics/src/main/resources/mapredjobs.conf
+++ b/DBLP-statistics/src/main/resources/mapredjobs.conf
@@ -1,32 +1,23 @@
 mapred-pipeline = {
     Job1 {
         name = "MapreduceJob1"
-        InputPath = "/user/maria_dev/Input/"
-        OutputPath = "/user/maria_dev/Output/"
         Seperator = ","
     }
     Job2 {
         name = "MapreduceJob2"
-        InputPath = "/user/maria_dev/Input/"
-        OutputPath = "/user/maria_dev/Output/"
         Seperator = ","
+        yearRange = 10
     }
     Job3 {
         name = "MapreduceJob3"
-        InputPath = "/user/maria_dev/Input/"
-        OutputPath = "/user/maria_dev/Output/"
         Seperator = ","
     }
     Job4 {
         name = "MapreduceJob4"
-        InputPath = "/user/maria_dev/Input/"
-        OutputPath = "/user/maria_dev/Output/"
         Seperator = ","
     }
     Job5 {
         name = "MapreduceJob5"
-        InputPath = "/user/maria_dev/Input/"
-        OutputPath = "/user/maria_dev/Output/"
         Seperator = ","
     }
 
